--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-VITE_APP_GRAPHQL_SERVER="https://graphql.dictybase.dev"
+VITE_GRAPHQL_SERVER="https://graphql.dictybase.dev"
+VITE_LOGTO_ENDPOINT="https://logto.dictybase.dev"
+VITE_LOGTO_APPID="cu7h1redzdyerxcmc829d"
+VITE_APP_LOGTO_API_FIRST_RESOURCE="https://user.dictybase.dev/api"
+VITE_APP_LOGTO_API_SECOND_RESOURCE="https://content.dictybase.dev/api"
