--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.17",
+    "@logto/react": "^2.1.2",
+    "@material-ui/core": "4.12.x",
     "apollo-upload-client": "^18.0.1",
-    "dicty-graphql-schema": "dictybase/dicty-graphql-schema#1.11.0",
+    "dicty-graphql-schema": "dictybase/dicty-graphql-schema#test",
     "react": "^17",
-    "react-dom": "^17"
+    "react-dom": "^17",
+    "react-router-dom": "~6.14.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
